# orellius-cognitive

./: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/laminae/: Cargo.toml  README.md
crates/laminae-anthropic/: README.md
crates/laminae-anthropic/src/: lib.rs
crates/laminae-cortex/: Cargo.toml  README.md
crates/laminae-cortex/src/: lib.rs
crates/laminae-glassbox/: Cargo.toml
crates/laminae-ironclad/: Cargo.toml
crates/laminae-ironclad/src/: lib.rs
crates/laminae-ironclad/src/sandbox/: linux.rs  windows.rs
crates/laminae-openai/: README.md
crates/laminae-openai/src/: lib.rs
crates/laminae-persona/: Cargo.toml  README.md
crates/laminae-persona/src/: lib.rs
crates/laminae-psyche/: README.md
crates/laminae-psyche/src/: lib.rs
crates/laminae-shadow/src/: config.rs  lib.rs  report.rs
crates/laminae/examples/: ego_claude.rs  ego_openai.rs  full_stack.rs  quickstart.rs  shadow_audit.rs
crates/laminae/src/: lib.rs
crates/laminae/tests/: t02_shadow_pipeline.rs  t05_full_stack.rs  t06_adversarial.rs
docs/src/backends/: claude.md  openai.md
docs/src/getting-started/: installation.md  quickstart.md
