[workspace]
resolver = "2"
members = [
    "crates/laminae",
    "crates/laminae-psyche",
    "crates/laminae-shadow",
    "crates/laminae-ironclad",
    "crates/laminae-glassbox",
    "crates/laminae-ollama",
    "crates/laminae-persona",
    "crates/laminae-cortex",
    "crates/laminae-anthropic",
    "crates/laminae-openai",
    "crates/laminae-python",
]

[workspace.package]
version = "0.4.2"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
repository = "https://github.com/orellius/laminae"
description = "The missing layer between raw LLMs and production AI"
keywords = ["ai", "llm", "safety", "guardrails", "security"]
categories = ["development-tools"]

[workspace.dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
# Error handling
thiserror = "2"
anyhow = "1"
# Logging
tracing = "0.1"
# Time
chrono = { version = "0.4", features = ["serde"] }
# Regex
regex = "1"
# Unicode normalization
unicode-normalization = "0.1"
# Async utilities
futures-util = "0.3"
# System
dirs = "6"
libc = "0.2"
# Internal crates
laminae-psyche = { version = "0.4.2", path = "crates/laminae-psyche" }
laminae-shadow = { version = "0.4.2", path = "crates/laminae-shadow" }
laminae-ironclad = { version = "0.4.2", path = "crates/laminae-ironclad" }
laminae-glassbox = { version = "0.4.2", path = "crates/laminae-glassbox" }
laminae-ollama = { version = "0.4.2", path = "crates/laminae-ollama" }
laminae-persona = { version = "0.4.2", path = "crates/laminae-persona" }
laminae-cortex = { version = "0.4.2", path = "crates/laminae-cortex" }
laminae-anthropic = { version = "0.4.2", path = "crates/laminae-anthropic" }
laminae-openai = { version = "0.4.2", path = "crates/laminae-openai" }
