[package]
name = "laminae-glassbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Input/output containment layer for AI agents — rate limiting, command blocklists, immutable zones"

[dependencies]
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "glassbox_bench"
harness = false
