[package]
name = "laminae-ironclad"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Process-level execution sandbox for AI agents — command whitelist, network filter, resource watchdog"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
laminae-glassbox = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_JobObjects", "Win32_System_Threading"] }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "ironclad_bench"
harness = false
