[package]
name = "laminae-persona"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Voice persona extraction and style enforcement for LLM output — learns how you write and keeps the AI on-voice"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
laminae-ollama = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "persona_bench"
harness = false
